examples/example_configmap.yml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-example-cmd-line
spec:
  restartPolicy: Never
  containers:
    - name: busybox-cmd-line
      image: busybox
      command:
        [
          "/bin/sh",
          "-c",
          "echo Redis Host:  $(REDIS_HOST)  Redis Port:  $(REDIS_PORT)",
        ]
---
apiVersion: v1
kind: Pod
metadata:
  name: configmap-example-env
spec:
  restartPolicy: Never
  containers:
    - name: busybox-env
      image: busybox
      command: ["/bin/sh", "-c", "--"]
      args: ["while true; do sleep 30; done;"]
---
apiVersion: v1
kind: Pod
metadata:
  name: configmap-example-volume
spec:
  restartPolicy: Never
  containers:
    - name: test-container
      image: busybox
      command: ["/bin/sh", "-c", "--"]
      args: ["while true; do sleep 30; done;"]
      volumeMounts:
        - name: config-volume
          mountPath: /etc/config
      imagePullPolicy: IfNotPresent
  volumes:
    - name: config-volume
      configMap:
        name: configmap-2
