examples/example_stateful_set.yml
 
apiVersion: v1
kind: Service
metadata:
 name: nginx-headless
 labels:
   app: nginx-sts-demo
spec:
 ports:
 - port: 80
   name: web
 clusterIP: None
 selector:
   app: nginx-sts-demo
 
---
 
apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: nginx-sts
spec:
 serviceName: "nginx-headless"
 replicas: 4
 selector:
   matchLabels:
     app: nginx-sts-demo
 template:
   metadata:
     labels:
       app: nginx-sts-demo
   spec:
     containers:
     - name: nginx
       image: nginx:1.15.9
       volumeMounts:
       - name: www
         mountPath: /var/www/
 volumeClaimTemplates:
 - metadata:
     name: www
   spec:
     storageClassName: manual
     accessModes:
       - ReadWriteOnce
     resources:
       requests:
         storage: 100Mi
